tests/urmoac/errors/testsuite.urmoac
# single dash on long option
help_long_singledash

# missing parameter for net
net_missing parameter

# string for a double option (max-tt)
maxtt_string_parameter

# using an unkown option (foo)
unknown_option

# different network issues that may occure
net_issues
